<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/memeback"
    tools:context="com.umeowstbekitten.denk.MainActivity" >

    <Button
        android:id="@+id/addImg"
        style="@android:style/Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/add_image"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/addFilter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addFilter"
        style="@android:style/Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_filter"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/saveImg"
        app:layout_constraintStart_toEndOf="@+id/addImg"
        app:layout_constraintTop_toTopOf="@+id/addImg" />

    <Button
        android:id="@+id/saveImg"
        style="@android:style/Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/more"
        app:layout_constraintStart_toEndOf="@+id/addFilter"
        app:layout_constraintTop_toTopOf="@+id/addFilter" />

    <Button
        android:id="@+id/more"
        style="@android:style/Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/saveImg"
        app:layout_constraintTop_toTopOf="@+id/saveImg" />

    <EditText
        android:id="@+id/topText"
        android:layout_width="346dp"
        android:layout_height="45dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/enter_top_text"
        android:inputType="text"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="@+id/bottomText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <EditText
        android:id="@+id/bottomText"
        android:layout_width="346dp"
        android:layout_height="45dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/enter_bottom_text"
        android:inputType="text"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="@+id/memefy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/memefy"
        style="@android:style/Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:onClick="memefy"
        android:text="@string/memefy"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <RelativeLayout
        android:id="@+id/really"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toTopOf="@+id/topText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addFilter" >

        <ImageView
            android:id="@+id/memeImg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/add_image"
            android:scaleType="fitCenter"
            android:src="@android:drawable/ic_menu_gallery" />

        <TextView
            android:id="@+id/memeTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:text="@string/top_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@android:color/background_light"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/memeBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="18dp"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:text="@string/bottom_text"
            android:textColor="@android:color/background_light"
            android:textSize="30sp"
            android:textStyle="bold" />

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>
